FullCalendar 7.x-1.x, xxxx-xx-xx
--------------------------------
#1033010 by tim.plunkett: Provide a default view as an example.
#1032980 by tim.plunkett, aspilicious: Improved default styling for Bartik.
#1013456 by tim.plunkett: Documentation clean-up.
#1031924 by tim.plunkett | Jody Lynn: Fixed call to deprecated Drupal.parseJson.
#980886 follow-up by tim.plunkett: Add call to new fullcalendar.custom.css.
#980810 by tim.plunkett: Added option to use fullcalendar.min.js.
#980886 by aspilicious, tim.plunkett: Move FullCalendar plugin out of module into sites/all/libraries.
#933622 by tim.plunkett: Port drag-and-drop to Drupal 7.
#933622 by tim.plunkett: Port to Drupal 7.

FullCalendar 6.x-2.x, xxxx-xx-xx
--------------------------------
by tim.plunkett: Updated CHANGELOG.txt.

FullCalendar 6.x-1.x, xxxx-xx-xx
--------------------------------

FullCalendar 6.x-1.0, 2011-01-05
--------------------------------
#1013456 by aspilicious, tim.plunkett: Documentation clean-up.

FullCalendar 6.x-1.2-rc1, 2010-12-30
------------------------------------
#984438 by tim.plunkett: Final coding clean-up before RC1.
#980810 by tim.plunkett | geerlingguy: Added option to use fullcalendar.min.js.
#980886 by tim.plunkett, jwhat: Move FullCalendar plugin out of module into sites/all/libraries.
by tim.plunkett: Added CHANGELOG.txt.

FullCalendar 6.x-1.2-beta6, 2010-12-20
--------------------------------------
#980180 by geerlingguy: Extra trailing comma breaks fullcalendar in IE 7 & IE 6.
#906112 by jwhat, tim.plunkett, geerlingguy: Added handle drag and drop: creating events, rescheduling events.
#910546 by tim.plunkett, bjalford: Fixed support for weekMode.
#984438 by tim.plunkett: Coding style clean-up.
#918144 by obrienmd, geerlingguy, Gaara: Documented repeating events support.
#917988 by tim.plunkett: Added Views options additions and clean-up.
#992812 by tim.plunkett: Fixed Date field discovery code fails on edge cases.