@@ -1,5 +1,9 @@
 FullCalendar 7.x-1.x, xxxx-xx-xx
 --------------------------------
+#1033858 by aspilicious: Added translation support.
+
+FullCalendar 7.x-1.2, 2011-01-19
+--------------------------------
 #1033010 by tim.plunkett: Provide a default view as an example.
 #1032980 by tim.plunkett, aspilicious: Improved default styling for Bartik.
 #1013456 by tim.plunkett: Documentation clean-up.
